--- a/kafka/java/booking/pom.xml
+++ b/kafka/java/booking/pom.xml
@@ -75,8 +75,14 @@
 			<artifactId>guava</artifactId>
 			<version>32.1.1-jre</version>
 		</dependency>
+        <dependency>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject-api</artifactId>
+            <version>2.0.1</version>
+            <scope>compile</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
